[package]
name = "control"
version = "0.1.0"
authors = ["Sam Blazes <sblazes16@gmail.com>"]

[dependencies]
conrod = "0.35.0"

[dependencies.cubelib]
path="../cubelib"

[dependencies.solver]
path="../solver"

[dependencies.recognizer]
path="../recognizer"

[dependencies.precomputer]
path="../precomputer"