[package]
name = "control"
version = "0.1.0"
authors = ["Sam Blazes <sblazes16@gmail.com>"]
build = "build.rs"
links="jvm"

[dependencies]
conrod = "0.35.0"
serial = "0.3.3"
piston_window = "0.47.0"
#jni-sys  = "0.1.0"
libc = "0.2.0"
#RustJni = {git = "https://github.com/Monnoroch/RustJni.git"}
#cubelib = {path="../cubelib"}
#solver = {path="../solver"}
#recognizer = {path="../recognizer"}
#precomputer = {path="../precomputer"}

[build-dependencies]
gcc = "0.3.0"